# olivier

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  config.toml  justfile
bruno/: health.bru  state.bru
entity/: Cargo.toml  README.md
entity/src/: category.rs  item.rs  lib.rs  migrations.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
entity/src/entities/: item.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  todos.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240118_000001_create_table.rs
src/: config.rs  entry.rs  error.rs  log.rs  main.rs  service.rs
src/config/: database.rs  log.rs  mod.rs  service.rs
src/dto/: request.rs  response.rs
src/handler/: mod.rs  openapi.rs  server.rs  todos.rs
src/protocol/: common.rs  mod.rs  request.rs  response.rs
src/router/: mod.rs  server.rs  todos.rs
src/routes/: item.rs  mod.rs  status.rs  user.rs  v0.rs
src/server/: mod.rs  server.rs  state.rs
src/service/: entry.rs  mod.rs
src/service/protocol/: common.rs  v0.rs
src/service/routes/: common.rs  v0.rs
