[package]
name = "olivier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
entity = { path = "entity" }
migration = { path = "migration" }

[workspace]
members = [".", "entity", "migration"]
